# my_sgm_zed_server

./: CMakeLists.txt  README.md
canshu/: extrinsics.yml  intrinsics.yml
include/: libsgm.h  libsgm_config.h
my_sgm_zed/: CMakeLists.txt
my_sgm_zed/include/: get_disparity.hpp  get_point_cloud.hpp  get_roi.hpp  little_tips.hpp  my_camera.hpp
my_sgm_zed/src/: get_disparity.cpp  get_point_cloud.cpp  get_roi.cpp  little_tips.cpp  main.cpp  my_camera.cpp
